<resources>
    <string name="app_name">ASAP</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="musician">Musician</string>
    <string name="corporate">Corporate</string>
    <string name="welcome">Welcome</string>
    <string name="user_name">User Name</string>
    <string name="events">Events</string>
    <string name="message">Message</string>
    <string name="advertising">Advertising</string>
    <string name="rating">Rating</string>
    <string name="costumes">Costumes</string>
    <string name="adverts">Advertisements</string>
    <string name="phone_number">Phone Number</string>
    <string name="search_events">Search Events</string>
    <string name="add_events">Add Events</string>
    <string name="select_date">Select Date</string>
    <string name="event_date">Event Date</string>
    <string name="corporate_name">Corporate Name</string>
    <string name="organizer_name">Organizer Name</string>
    <string name="organizers">Organizers</string>
    <string name="location">Location</string>
    <string name="select_time">Select Time</string>
    <string name="amount">Amount</string>
    <string name="ksh">Ksh.</string>
    <string name="event_details">Event Details</string>
    <string name="add_event">Add Event</string>
    <string name="event_name">Event Name</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="bidders">Bidders</string>
    <string name="bid_on_event">Bid on Event</string>
    <string name="place_bid">Place Bid</string>
    <string name="category">Category</string>
    <string name="booked_events">Booked Events</string>
    <string name="eventmziki">EventMziki</string>
    <string name="bid_amount">Bid Amount</string>
    <string-array name="event_Category">
        <item>Sports</item>
        <item>Church</item>
        <item>Music</item>
        <item>Wedding</item>
        <item>Graduation</item>
        <item>Cinematography</item>
        <item>Clubbing</item>
        <item>Other</item>
    </string-array>
    <string name="title_activity_main_dash">MainActivityDash</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="ratings">Ratings</string>
    <string name="about">About</string>
    <string name="socials">Socials</string>
    <string name="book_now">Book Now</string>
    <string name="booked">Booked</string>
    <string name="chats">Chats</string>
    <string name="write_message">Write Message</string>
    <string name="termsandconditions">1. INTRODUCTION\n Welcome to ASAP . By using our application (the “ASAP”), you agree to these terms and conditions . Please read them carefully.\n
        2. ACCEPTANCE OF TERMS\n By accessing or using the app, you agree to be bound by these terms. if you do not agree with any part of these terms, you must not use the app.\n
        3. CHANGES TO TERMS\n We reserve the right to modify these terms at any time. Changes will be effective immediately upon posting on the app. your continued use of the app after changes are posted constitutes your acceptance of the revised terms.\n
        4. USE OF THE APP\n 4.1 ELIGIBILITY\n You must be at least [minimum age] years old to use this app. by using the app, you represent and warrant that you meet this age requirement.\n
        4.2 ACCOUNT REGISTRATION\n To access certain features, you may need to create an account, by you agreeing to provide accurate and complete information during registration and to update your information to keep it accurate.\n
        4.3 USER RESPONSIBILITIES\n You are responsible for maintaining the confidentiality of your account information and for all activities that occur under your account. notify us immediately of any unauthorized use of your account.\n
        5. SERVICE DESCRIPTION\n The app provides [brief description of services]. we make no guarantees about the availability or reliability of the services provided.\n
        6. FEES AND PAYMENTS\n The app includes paid services, you agree to pay all applicable fees. all fees are non-refundable unless otherwise specified.\n
        7. INTELLECTUAL PROPERTY\n 7.1 OWNERSHIP\n All content, trademarks, and other intellectual property associated with the app are owned by us or our licensors. you may not use any content from the app without our express permission.\n
        7.2 USER CONTENT\nYou retain ownership of any content you submit to the app but grant us a license to use, modify, and distribute your content as necessary to operate and improve the app.\n
        8. PRIVACY\nThe use of the app is also governed by our privacy policy, which can be found [link to privacy policy]. by using the app, you consent to our collection and use of personal information as described in the privacy policy.\n
        9. PROHIBITED CONDUCT\nYOU AGREE NOT TO USE THE APP IN ANY WAY THAT VIOLATES THE FOLLOWING:\n - Use the app for any unlawful or unauthorized purpose.\n- Interfere with or disrupt the app’s functionality.\n- Transmit any harmful or malicious software.\n- Impersonate any person or entity or misrepresent your affiliation with any person or entity.\n
        10. DISCLAIMERS\n The app is provided on an “as is” and “as available” basis. We make no warranties, express or implied, regarding the app’s operation or the information it provides. we are not liable for any damages arising from your use of the app.\n
        11. LIMITATION OF LIABILITY\n To the fullest extent permitted by law, we will not be liable for any indirect, incidental, consequential, or punitive damages arising out of or related to your use of the app.\n
        12. INDEMNIFICATION\nYou agree to indemnify, defend, and hold us harmless from any claims, liabilities, damages, losses, and expenses arising from your use of the app or violation of these terms.\n
        13. TERMINATION\n We reserve the right to suspend or terminate your access to the app at our discretion, with or without cause, and with or without notice.\n
        14. GOVERNING LAW\nThese terms are governed by and construed in accordance with the laws of [your jurisdiction], without regard to its conflict of law principles.\n
        15. DISPUTE RESOLUTION\n Any disputes arising out of or related to these terms or the app will be resolved through binding arbitration in [your jurisdiction], except where prohibited by law.\n
        16. CONTACT INFORMATION\n For any questions or concerns regarding these terms, please contact us at [your contact information].</string>
    <string name="todo">TODO</string>
    <string-array name="User_Category">
        <item>Music</item>
        <item>Emcee</item>
        <item>Car Rental</item>
        <item>Sound</item>
        <item>Catering</item>
        <item>Costumes</item>
        <item>Influencers</item>
        <item>Photographer</item>
        <item>Decorations</item>
        <item>MakeUp</item>
        <item>Sponsors</item>
    </string-array>
    <string-array name="music_genres">
        <item>Pop</item>
        <item>Rock</item>
        <item>Hip Hop</item>
        <item>Electronic</item>
        <item>Jazz</item>
        <item>Classical</item>
        <item>Country</item>
        <item>Blues</item>
        <item>Reggae</item>
        <item>Soul</item>
        <item>Latin</item>
        <item>Dance</item>
        <item>Other</item>
    </string-array>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="age_group">
        <item>Child</item>
        <item>Teenager</item>
        <item>Adult</item>
        <item>Old</item>
    </string-array>
    <string-array name="mc_roles">
        <item>All</item>
        <item>Introductions</item>
        <item>Announcements</item>
        <item>Entertainment</item>
        <item>Crowd Hype</item>
        <item>Thanks Giving</item>
    </string-array>
    <string-array name="material">
        <item>Leather</item>
        <item>Silk</item>
        <item>Cotton</item>
        <item>Polyester</item>
        <item>Other</item>
    </string-array>
    <string-array name="Car_Rental">
        <item>All Cars</item>
        <item>Luxury Cars</item>
        <item>Economy Cars</item>
        <item>Business Cars</item>
        <item>Bikes</item>
        <item>Electric</item>
    </string-array>
    <string-array name="car_type">
        <item>Sedans</item>
        <item>Coupes</item>
        <item>Hatchbacks</item>
        <item>SUVs</item>
        <item>Minivans</item>
        <item>Pickup Trucks</item>
    </string-array>
    <string-array name="car_models">
        <item>Toyota</item>
        <item>Nissan</item>
        <item>Mitsubishi</item>
        <item>Ford</item>
        <item>Honda</item>
        <item>Mazda</item>
        <item>Kia</item>
        <item>Chevrolet</item>
        <item>Hyundai</item>
        <item>Volkswagen</item>
        <item>BMW</item>
        <item>Mercedes-Benz</item>
        <item>Audi</item>
        <item>Lexus</item>
        <item>Subaru</item>
        <item>Tesla</item>
        <item>Porsche</item>
        <item>Ferrari</item>
        <item>Lamborghini</item>
        <item>Rolls-Royce</item>
        <item>Maserati</item>
        <item>Jaguar</item>
        <item>Land Rover</item>
        <item>Volvo</item>
        <item>Jeep</item>
    </string-array>
    <string-array name="car_color">
        <item>Black</item>
        <item>White</item>
        <item>Red</item>
        <item>Blue</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Orange</item>
        <item>Silver</item>
        <item>Gold</item>
        <item>Brown</item>
        <item>Purple</item>
        <item>Pink</item>
        <item>Gray</item>
        <item>Beige</item>
        <item>Other</item>
    </string-array>
    <string-array name="transmission">
        <item>Manual</item>
        <item>Automatic</item>
        <item>Electric</item>
        <item>Auto/Manual</item>
    </string-array>
    <string-array name="seats">
        <item>2</item>
        <item>4</item>
        <item>5</item>
        <item>7</item>
        <item>10</item>
    </string-array>
    <string-array name="size">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra Large</item>
    </string-array>
    <string-array name="sound_services">
        <item>DJ</item>
        <item>Sound System</item>
        <item>Equipment</item>
        <item>Full Board</item>
        <item>Event Management</item>
    </string-array>
    <string-array name="photography_package">
        <item>Indoor Package</item>
        <item>Outdoor Package</item>
        <item>Studio Package</item>
        <item>Travel Package</item>
        <item>Corporate Package</item>
        <item>Contract Package</item>
        <item>Aerial Package</item>
        <item>Other</item>
    </string-array>
    <string-array name="photo_format">
        <item>RAW</item>
        <item>Edited</item>
        <item>Printed</item>
        <item>All</item>
    </string-array>
    <string-array name="delivery_method">
        <item>Online Gallery</item>
        <item>USB Drive</item>
        <item>Physical Library</item>
        <item>All</item>
    </string-array>
    <string-array name="special_equipments">
        <item>Drones</item>
        <item>Props</item>
        <item>Lighting</item>
        <item>Other</item>
    </string-array>
</resources>