<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addEvents">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="8dp">

        <LinearLayout
            android:id="@+id/top_bar_nav"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">
            <ImageView
                android:id="@+id/back_arrow"
                android:clickable="true"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="start"
                android:src="@drawable/back_arrow"
                app:tint="@color/red"
                android:focusable="true" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:letterSpacing="0.1"
                android:textColor="@color/blue"
                android:text="@string/add_events"
                android:textAlignment="center"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/eventPoster"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/cover" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="140dp"
                android:padding="5dp">
                <TextView
                    android:id="@+id/organizerNameTv"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/organizer_name"
                    android:letterSpacing="0.1"
                    android:textColor="@color/orange"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/addPosterBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Add Poster"
                    android:drawableEnd="@drawable/add_poster"
                    android:drawableTint="@color/white"/>
            </LinearLayout>

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:letterSpacing="0.1"
                    android:text="@string/event_name"/>

                <EditText
                    android:id="@+id/inputTaskName"
                    android:hint="@string/event_name"
                    android:background="@drawable/edit_text_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:elevation="5dp"
                    android:padding="10dp"/>

                <TextView
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:letterSpacing="0.1"
                    android:text="@string/event_details"/>

                <EditText
                    android:id="@+id/eventDetails"
                    android:hint="@string/event_details"
                    android:background="@drawable/edit_text_bg"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:elevation="5dp"
                    android:padding="10dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <Button
                        android:id="@+id/datePickerBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/event_small_icon"
                        android:backgroundTint="@color/orange"
                        android:drawableTint="@color/white"
                        android:text="@string/select_date"
                        android:layout_margin="5dp" />

                    <TextView
                        android:id="@+id/datePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/event_date"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:letterSpacing="0.1"
                        android:textSize="15sp"
                        android:visibility="visible" />
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="#B0B0B0" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/timePickerBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:drawableEnd="@drawable/clock_small_icon"
                        android:drawableTint="@color/white"
                        android:backgroundTint="@color/blue"
                        android:layout_margin="5dp"
                        android:text="@string/select_time" />

                    <TextView
                        android:id="@+id/timePicker"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Event Time"
                        android:textStyle="bold"
                        android:layout_margin="5dp"
                        android:padding="5dp"
                        android:letterSpacing="0.1"
                        android:textSize="15sp"
                        android:visibility="visible" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="#B0B0B0" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:src="@drawable/location_icon"/>
                        <TextView
                            android:id="@+id/LocationBtn"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/location"
                            android:textStyle="bold"
                            android:layout_margin="5dp"
                            android:padding="7dp"
                            android:letterSpacing="0.1"
                            android:textSize="15sp"
                            android:visibility="visible" />
                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="#B0B0B0" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/select_purpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:layout_margin="8dp"
                    android:background="@drawable/edit_text_bg"
                    android:elevation="3dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:text="@string/category"
                        android:textColor="@color/black"
                        android:textSize="17sp"
                        android:textStyle="bold" />

                    <Spinner
                        android:id="@+id/spinner_category"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="10dp"
                        android:padding="10dp"
                        android:elevation="5dp"
                        android:entries="@array/event_Category"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_margin="5dp"
                            android:src="@drawable/money_icon"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/ksh"
                            android:textStyle="bold"
                            android:layout_margin="5dp"
                            android:padding="7dp"
                            android:letterSpacing="0.1"
                            android:textSize="15sp"/>

                        <EditText
                            android:id="@+id/amountTxt"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edit_text_bg"
                            android:hint="@string/amount"
                            android:textStyle="bold"
                            android:inputType="number"
                            android:elevation="5dp"
                            android:layout_margin="5dp"
                            android:padding="7dp"
                            android:letterSpacing="0.1"
                            android:textSize="15sp"/>
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_margin="5dp"
                        android:background="#B0B0B0" />

                </LinearLayout>

                <Button
                    android:id="@+id/add_event"
                    android:layout_width="260dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="6dp"
                    android:text="@string/add_event"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </ScrollView>


    </LinearLayout>

</RelativeLayout>